test/chainsaw/authpolicy/audience_referencing/authpolicy-with-allowed-audience.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
spec:
  enabled: true
  allowedAudiences:
    - value: allowed-audience-1
    - value: allowed-audience-2
    - value: allowed-audience-3
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
