test/chainsaw/authpolicy/audience_referencing/authpolicy-with-illegal-audience-valueref-configmap.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
spec:
  enabled: true
  allowedAudiences:
    - valueFrom:
        configMapKeyRef:
          name: configmap-illegal-audience-value-ref
          key: AUDIENCE
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
