test/chainsaw/authpolicy/audience_referencing/empty-audience-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: configmap-illegal-audience-value-ref
data:
  AUDIENCE: ""
