test/chainsaw/authpolicy/audience_referencing/empty-audience-secret.yaml
apiVersion: v1
kind: Secret
type: Opaque
metadata:
  name: secret-illegal-audience-value-ref
data:
  AUDIENCE: ""
