test/chainsaw/authpolicy/audience_referencing/authpolicy-assert.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: auth-policy
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  jwtRules:
    - audiences:
        - audience-inline
        - audience-from-configmap
        - audience-from-secret
      forwardOriginalToken: true
      issuer: http://mock-oauth2.auth:8080/entraid
      jwksUri: http://mock-oauth2.auth:8080/entraid/jwks
  selector:
    matchLabels:
      app: application
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-require-auth
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  rules:
    - to:
        - operation:
            paths:
              - "*"
      when:
        - key: request.auth.claims[iss]
          values:
            - http://mock-oauth2.auth:8080/entraid
        - key: request.auth.claims[aud]
          values:
            - audience-inline
            - audience-from-configmap
            - audience-from-secret
  selector:
    matchLabels:
      app: application
