test/chainsaw/authpolicy/audience_referencing/authpolicy-with-illegal-audience-valueref-assert.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
status:
  phase: Failed
  ready: false
