test/chainsaw/authpolicy/audience_referencing/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: audience-referencing
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespaceTemplate:
    metadata:
      labels:
        istio-injection: enabled

  steps:
    - try:
        - create:
            file: ../../../resources/skiperator/application.yaml
        - create:
            file: authpolicy.yaml
        - assert:
            file: authpolicy-assert.yaml
